Add bcrypt for password | multer for file upload and Config cloudinary

--- a/env.example
+++ b/env.example
@@ -1,3 +1,10 @@
 PORT = '' #add port on which app needs to be served
 CORS_ORIGIN = '' #add frontend URL to make it for secure
 MONGODB_URI = '' #add DB connection URL
+ACCESS_TOKEN_SECRET = '' #for JWT access token (long random generated strings can also be used )
+ACCESS_TOKEN_EXPIRY = '' #e.g : 1h, 1d, 15m
+REFRESH_TOKEN_SECRET = '' #(long random generated strings can also be used )
+REFRESH_TOKEN_EXPIRY = ''
+CLOUDINARY_CLOUD_NAME = ''
+CLOUDINARY_API_KEY = ''
+CLOUDINARY_API_SECRET = ''
